# droste-memory

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DROSTE_AGENT_GUIDE.md  LICENSE  MANIFEST.in  README.md  conftest.py  droste.cmd  droste.py  pyproject.toml  requirements.txt  server.json  server.py  start.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  growth-radar.yml  publish-mcp-registry.yml
core/: __init__.py  droste_cli.py  droste_engine.py  droste_ingester.py  droste_mcp.py  droste_watcher.py  embedding_projector.py  treesitter_extract.py
docs/: GROWTH_ENGINE.md  LAUNCH_KIT.md  PLATFORM_INTEGRATION_BRIEF.md  SUBMISSION_PACK.md  __init__.py  app.py  cockpit.html  demo_graph.json  export_graph.py
eval/: bench_sharded_save.py  comparative_eval.py  embed_cache_smoke.py  generate_mega_repo.py  hard_stress_test.py  profile_warm.py  retrieval_eval.py  steady_latency.py  test_fault_tolerance.py  ts_validate_newlangs.py
integrations/claude-skill/droste-code-memory/: SKILL.md
integrations/claude-skill/droste-code-memory/references/: claude-mcp-config.md
integrations/claude-skill/droste-code-memory/scripts/: check_droste.py
integrations/codex-skill/droste-code-memory/: SKILL.md
integrations/codex-skill/droste-code-memory/agents/: openai.yaml
integrations/codex-skill/droste-code-memory/references/: mcp-config.md
integrations/codex-skill/droste-code-memory/scripts/: check_droste.py
plugins/droste-memory/: .mcp.json  README.md
plugins/droste-memory/.codex-plugin/: plugin.json
plugins/droste-memory/scripts/: droste_codex_mcp.py  run_mcp.cmd  run_mcp.ps1
plugins/droste-memory/skills/droste-memory/: SKILL.md
scripts/: check_release_alignment.py  growth_radar.py
tests/: test_core_invariants.py  test_shards_race.py
visualizer/: export_graph.py  server.py
visualizer/templates/: index.html
